--- a/style.css
+++ b/style.css
@@ -61,20 +61,22 @@ form{
 }
 
 #Location-title{
-    margin-left: 2rem;
-    margin-top: 2rem;
+    margin: 2rem;
+    padding-left: 1rem;
 }
 
 #today,
 #tomorrow,
+#Location-title,
 .hour-card{
-    background-color: rgba(255, 255, 255, 0.3);
-    border:  3px solid rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.42);
+    border:  3px solid rgba(255, 255, 255, 0.8);
     border-radius: 15px;
 }
 
 .hour-card{
     flex: 1;
+    width: 125px;
     padding: 18px;
     height: 100px;
     text-align: center;
@@ -118,7 +120,7 @@ form{
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    border: none;
+    border: 1px solid white;
     grid-column: 2/3;
     grid-row: 1/2;
 }
